reference/7.0/Microsoft.PowerShell.Utility/Test-Json.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 09/19/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/test-json?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Test-Json
ms.openlocfilehash: 2e3d49700adb8115bf24ae505fbb00c14a774f15
ms.sourcegitcommit: de63e9481cf8024883060aae61fb02c59c2de662
ms.translationtype: MT
ms.contentlocale: nl-NL
ms.lasthandoff: 07/03/2020
ms.locfileid: "93249803"
---
# <span data-ttu-id="2c109-103">Test-Json</span><span class="sxs-lookup"><span data-stu-id="2c109-103">Test-Json</span></span>

## <span data-ttu-id="2c109-104">SAMENVATTING</span><span class="sxs-lookup"><span data-stu-id="2c109-104">SYNOPSIS</span></span>
<span data-ttu-id="2c109-105">Test of een teken reeks een geldig JSON-document is</span><span class="sxs-lookup"><span data-stu-id="2c109-105">Tests whether a string is a valid JSON document</span></span>

## <span data-ttu-id="2c109-106">SYNTAXIS</span><span class="sxs-lookup"><span data-stu-id="2c109-106">SYNTAX</span></span>

```
Test-Json [-Json] <string> [[-Schema] <string>] [<CommonParameters>]
```

## <span data-ttu-id="2c109-107">BESCHRIJVING</span><span class="sxs-lookup"><span data-stu-id="2c109-107">DESCRIPTION</span></span>

<span data-ttu-id="2c109-108">De `Test-Json` cmdlet test of een teken reeks een geldig JavaScript object Notation (JSON)-document is en kan eventueel het JSON-document controleren op basis van een bijkomend schema.</span><span class="sxs-lookup"><span data-stu-id="2c109-108">The `Test-Json` cmdlet tests whether a string is a valid JavaScript Object Notation (JSON) document and can optionally verify that JSON document against a provided schema.</span></span>

<span data-ttu-id="2c109-109">De gecontroleerde teken reeks kan vervolgens worden gebruikt met de `ConvertFrom-Json` cmdlet Converteer een JSON-indelings teken reeks naar een JSON-object, dat eenvoudig kan worden beheerd in Power shell of wordt verzonden naar een ander programma of een webservice die toegang heeft tot JSON-invoer.</span><span class="sxs-lookup"><span data-stu-id="2c109-109">The verified string can then be used with the `ConvertFrom-Json` cmdlet convert a JSON-formatted string to a JSON object, which is easily managed in PowerShell or sent to another program or web service that access JSON input.</span></span>

<span data-ttu-id="2c109-110">Veel websites gebruiken JSON in plaats van XML om gegevens te serialiseren voor communicatie tussen servers en web-apps.</span><span class="sxs-lookup"><span data-stu-id="2c109-110">Many web sites use JSON instead of XML to serialize data for communication between servers and web-based apps.</span></span>

<span data-ttu-id="2c109-111">Deze cmdlet is geïntroduceerd in Power shell 6,1</span><span class="sxs-lookup"><span data-stu-id="2c109-111">This cmdlet was introduced in PowerShell 6.1</span></span>

## <span data-ttu-id="2c109-112">VOORBEELDEN</span><span class="sxs-lookup"><span data-stu-id="2c109-112">EXAMPLES</span></span>

### <span data-ttu-id="2c109-113">Voor beeld 1: testen of een object een geldige JSON is</span><span class="sxs-lookup"><span data-stu-id="2c109-113">Example 1: Test if an object is valid JSON</span></span>

<span data-ttu-id="2c109-114">In dit voor beeld wordt getest of de invoer teken reeks een geldig JSON-document is.</span><span class="sxs-lookup"><span data-stu-id="2c109-114">This example tests whether the input string is a valid JSON document.</span></span>

```powershell
"{'name': 'Ashley', 'age': 25}" | Test-Json
```

```Output
True
```

### <span data-ttu-id="2c109-115">Voor beeld 2: een object testen op basis van een bijkomend schema</span><span class="sxs-lookup"><span data-stu-id="2c109-115">Example 2: Test an object against a provided schema</span></span>

<span data-ttu-id="2c109-116">In dit voor beeld wordt een teken reeks met een JSON-schema gebruikt en vergeleken met een invoer teken reeks.</span><span class="sxs-lookup"><span data-stu-id="2c109-116">This example takes a string containing a JSON schema and compares it to an input string.</span></span>

```powershell
$schema = @'
{
  "definitions": {},
  "$schema": "http://json-schema.org/draft-07/schema#",
  "$id": "http://example.com/root.json",
  "type": "object",
  "title": "The Root Schema",
  "required": [
    "name",
    "age"
  ],
  "properties": {
    "name": {
      "$id": "#/properties/name",
      "type": "string",
      "title": "The Name Schema",
      "default": "",
      "examples": [
        "Ashley"
      ],
      "pattern": "^(.*)$"
    },
    "age": {
      "$id": "#/properties/age",
      "type": "integer",
      "title": "The Age Schema",
      "default": 0,
      "examples": [
        25
      ]
    }
  }
}
'@
"{'name': 'Ashley', 'age': '25'}" | Test-Json -Schema $schema
```

```Output
Test-Json : IntegerExpected: #/age
At line:1 char:37
+ "{'name': 'Ashley', 'age': '25'}" | Test-Json -Schema $schema
+                                     ~~~~~~~~~~~~~~~~~~~~~~~~~
+ CategoryInfo          : InvalidData: (:) [Test-Json], Exception
+ FullyQualifiedErrorId : InvalidJsonAgainstSchema,Microsoft.PowerShell.Commands.TestJsonCommand
False
```

<span data-ttu-id="2c109-117">In dit voor beeld wordt er een fout bericht weer geven omdat het schema een geheel getal voor de **leeftijd** verwacht, maar de JSON-invoer die we hebben getest, gebruikt een teken reeks waarde.</span><span class="sxs-lookup"><span data-stu-id="2c109-117">In this example, we get an error because the schema expects an integer for **age** but the JSON input we tested uses a string value instead.</span></span>

<span data-ttu-id="2c109-118">Zie [JSON-schema](https://json-schema.org/)voor meer informatie.</span><span class="sxs-lookup"><span data-stu-id="2c109-118">For more information, see [JSON Schema](https://json-schema.org/).</span></span>

## <span data-ttu-id="2c109-119">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="2c109-119">PARAMETERS</span></span>

### <span data-ttu-id="2c109-120">-JSON</span><span class="sxs-lookup"><span data-stu-id="2c109-120">-Json</span></span>

<span data-ttu-id="2c109-121">Hiermee geeft u de JSON-teken reeks op die u wilt testen op geldigheid.</span><span class="sxs-lookup"><span data-stu-id="2c109-121">Specifies the JSON string to test for validity.</span></span> <span data-ttu-id="2c109-122">Voer een variabele in die de teken reeks bevat, of typ een opdracht of expressie die de teken reeks ophaalt.</span><span class="sxs-lookup"><span data-stu-id="2c109-122">Enter a variable that contains the string, or type a command or expression that gets the string.</span></span> <span data-ttu-id="2c109-123">U kunt ook een teken reeks aan een pipe door geven `Test-Json` .</span><span class="sxs-lookup"><span data-stu-id="2c109-123">You can also pipe a string to `Test-Json`.</span></span>

<span data-ttu-id="2c109-124">De **JSON** -para meter is vereist.</span><span class="sxs-lookup"><span data-stu-id="2c109-124">The **Json** parameter is required.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="2c109-125">-Schema</span><span class="sxs-lookup"><span data-stu-id="2c109-125">-Schema</span></span>

<span data-ttu-id="2c109-126">Hiermee geeft u een schema op voor het valideren van de JSON-invoer.</span><span class="sxs-lookup"><span data-stu-id="2c109-126">Specifies a Schema to validate the JSON input against.</span></span> <span data-ttu-id="2c109-127">Als door gegeven `Test-Json` wordt gecontroleerd of de JSON-invoer voldoet aan de specificatie die is opgegeven door de **schema** parameter en retour neren `$True` als de invoer voldoet aan het opgegeven schema.</span><span class="sxs-lookup"><span data-stu-id="2c109-127">If passed `Test-Json` will validate that the Json input conforms to the spec specified by the **Schema** parameter and return `$True` only if the input conforms to the provided Schema.</span></span>

<span data-ttu-id="2c109-128">Zie [JSON-schema](https://json-schema.org/)voor meer informatie.</span><span class="sxs-lookup"><span data-stu-id="2c109-128">For more information, see [JSON Schema](https://json-schema.org/).</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: 2
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="2c109-129">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="2c109-129">CommonParameters</span></span>

<span data-ttu-id="2c109-130">Deze cmdlet biedt ondersteuning voor de meest gebruikte parameters: -Debug, - ErrorAction, - ErrorVariable, - InformationAction, -InformationVariable, - OutVariable,-OutBuffer, - PipelineVariable - Verbose, - WarningAction en -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="2c109-130">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="2c109-131">Zie [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216)voor meer informatie.</span><span class="sxs-lookup"><span data-stu-id="2c109-131">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="2c109-132">INVOER</span><span class="sxs-lookup"><span data-stu-id="2c109-132">INPUTS</span></span>

### <span data-ttu-id="2c109-133">System. String</span><span class="sxs-lookup"><span data-stu-id="2c109-133">System.String</span></span>

<span data-ttu-id="2c109-134">U kunt een JSON-teken reeks door sluizen naar `Test-Json` .</span><span class="sxs-lookup"><span data-stu-id="2c109-134">You can pipe a JSON string to `Test-Json`.</span></span>

## <span data-ttu-id="2c109-135">UITVOER</span><span class="sxs-lookup"><span data-stu-id="2c109-135">OUTPUTS</span></span>

### <span data-ttu-id="2c109-136">Boolean-waarde</span><span class="sxs-lookup"><span data-stu-id="2c109-136">Boolean</span></span>

## <span data-ttu-id="2c109-137">OPMERKINGEN</span><span class="sxs-lookup"><span data-stu-id="2c109-137">NOTES</span></span>

<span data-ttu-id="2c109-138">De `Test-Json` cmdlet wordt geïmplementeerd met behulp van de [NJsonSchema-klasse](https://github.com/RSuter/NJsonSchema).</span><span class="sxs-lookup"><span data-stu-id="2c109-138">The `Test-Json` cmdlet is implemented by using the [NJsonSchema Class](https://github.com/RSuter/NJsonSchema).</span></span>

## <span data-ttu-id="2c109-139">GERELATEERDE KOPPELINGEN</span><span class="sxs-lookup"><span data-stu-id="2c109-139">RELATED LINKS</span></span>

<span data-ttu-id="2c109-140">[Een inleiding tot JavaScript Object Notation (JSON) in Java script en .NET](/previous-versions/dotnet/articles/bb299886(v=msdn.10))</span><span class="sxs-lookup"><span data-stu-id="2c109-140">[An Introduction to JavaScript Object Notation (JSON) in JavaScript and .NET](/previous-versions/dotnet/articles/bb299886(v=msdn.10))</span></span>

[<span data-ttu-id="2c109-141">Aanvullende details van het JSON-schema</span><span class="sxs-lookup"><span data-stu-id="2c109-141">Additional JSON Schema Details</span></span>](https://json-schema.org/)

[<span data-ttu-id="2c109-142">ConvertTo-Json</span><span class="sxs-lookup"><span data-stu-id="2c109-142">ConvertTo-Json</span></span>](ConvertTo-Json.md)

[<span data-ttu-id="2c109-143">Invoke-WebRequest</span><span class="sxs-lookup"><span data-stu-id="2c109-143">Invoke-WebRequest</span></span>](Invoke-WebRequest.md)

[<span data-ttu-id="2c109-144">Invoke-RestMethod</span><span class="sxs-lookup"><span data-stu-id="2c109-144">Invoke-RestMethod</span></span>](Invoke-RestMethod.md)
